--- a/faq.html
+++ b/faq.html
@@ -182,9 +182,27 @@
     syncDropdownMode();
   </script>
   
-  
-  <main class="rules-container rules-container--compact">
-    <h1 class="rules-title">FAQ</h1>
+  <!-- Hero Section for FAQ -->
+  <div class="faq-hero">
+    <div class="faq-hero-bg"></div>
+    <div class="faq-hero-content">
+      <div class="faq-logo">
+        <img src="Media/Logo/logo.png" alt="Anubis Underground" class="faq-logo-img">
+      </div>
+      <h1 class="faq-title">FREQUENTLY <span class="text-accent">ASKED</span></h1>
+      <p class="faq-subtitle">Questions & Underground Answers</p>
+      <div class="faq-tagline">Everything you need to know about the scene</div>
+      <div class="faq-divider"></div>
+    </div>
+  </div>
+
+  <!-- Main Content -->
+  <div class="content">
+    <main class="faq-container">
+      <div class="section-header">
+        <h2 class="section-title">FAQ</h2>
+        <p class="section-subtitle">Click on each question to reveal the answers</p>
+      </div>
     <div class="rules-list">
       <div class="rule-item">
         <h2 class="rule-header">How can I stay updated on upcoming events?</h2>
