--- a/rules.html
+++ b/rules.html
@@ -185,8 +185,27 @@
     syncDropdownMode();
   </script>
   
-  <main class="rules-container rules-container--compact">
-    <h1 class="rules-title">HOUSE RULES</h1>
+  <!-- Hero Section for Rules -->
+  <div class="rules-hero">
+    <div class="rules-hero-bg"></div>
+    <div class="rules-hero-content">
+      <div class="rules-logo">
+        <img src="Media/Logo/logo.png" alt="Anubis Underground" class="rules-logo-img">
+      </div>
+      <h1 class="rules-title">HOUSE <span class="text-accent">RULES</span></h1>
+      <p class="rules-subtitle">The Code of the Underground</p>
+      <div class="rules-tagline">Respect • Unity • Freedom • Music</div>
+      <div class="rules-divider"></div>
+    </div>
+  </div>
+
+  <!-- Main Content -->
+  <div class="content">
+    <main class="rules-container">
+      <div class="section-header">
+        <h2 class="section-title">THE <span class="text-accent">COMMANDMENTS</span></h2>
+        <p class="section-subtitle">Click on each rule to reveal the underground wisdom</p>
+      </div>
     
     <div class="rules-list">
       <div class="rule-item">
