--- a/events.html
+++ b/events.html
@@ -173,45 +173,114 @@
     syncDropdownMode();
   </script>
 
-  <div class="content">
-    <div class="page-header">
-      <h1>EVENTS</h1>
+  <!-- Hero Section -->
+  <section class="hero-section">
+    <div class="hero-bg"></div>
+    <div class="hero-content">
+      <div class="hero-logo">
+        <img class="hero-logo-img" src="Media/Logo/logo.png" alt="Anubis Underground Logo">
+      </div>
+      <h1 class="hero-title">ANUBIS <span class="text-accent">EVENTS</span></h1>
+      <p class="hero-subtitle">Underground Music Experiences</p>
+      <p class="hero-tagline">Immersive events that transcend commercial boundaries</p>
+      <div class="hero-divider"></div>
     </div>
+  </section>
 
-    <!-- Static event: CLEOPATRA'S CURSE -->
-    <h2 class="event-title" id="event-cleopatra-title" style="margin-top: 40px;">CLEOPATRA'S CURSE</h2>
-    <div class="event-container" aria-labelledby="event-cleopatra-title">
-      <img src="Media/Events/CLEOPATRAS/cleopatrascurse.jpg" alt="Cleopatra's Curse Event">
-    </div>
-    <div style="text-align: center; margin: 20px 0;">
-      <a href="https://www.entrio.si/event/anubis-cleopatras-curse-27981" target="_blank" rel="noopener noreferrer" class="ticket-btn">GET YOUR TICKETS</a>
-    </div>
+  <!-- Main Content -->
+  <main class="content">
+    <!-- Featured Event Section -->
+    <section class="featured-event-section">
+      <div class="section-header">
+        <h2 class="section-title">UPCOMING <span class="text-accent">EVENT</span></h2>
+        <p class="section-subtitle">Don't miss our next underground experience</p>
+      </div>
+      
+      <div class="event-card-modern">
+        <div class="event-image-container">
+          <img src="Media/Events/CLEOPATRAS/cleopatrascurse.jpg" alt="Cleopatra's Curse Event">
+          <div class="event-overlay">
+            <div class="event-badge">NEXT EVENT</div>
+          </div>
+        </div>
+        <div class="event-details-modern">
+          <h3 class="event-name-modern">CLEOPATRA'S CURSE</h3>
+          <p class="event-description-modern">An underground journey through ancient mystique and modern beats. Experience the curse that binds rhythm to soul in the depths of Ljubljana's underground scene.</p>
+          <div class="event-meta-grid">
+            <div class="meta-item">
+              <span class="meta-label">DATE</span>
+              <span class="meta-value">22.11.2025</span>
+            </div>
+            <div class="meta-item">
+              <span class="meta-label">LOCATION</span>
+              <span class="meta-value">Ljubljana, Slovenia</span>
+            </div>
+            <div class="meta-item">
+              <span class="meta-label">GENRE</span>
+              <span class="meta-value">Underground Techno</span>
+            </div>
+            <div class="meta-item">
+              <span class="meta-label">STATUS</span>
+              <span class="meta-value">Tickets Available</span>
+            </div>
+          </div>
+          <a href="https://www.entrio.si/event/anubis-cleopatras-curse-27981" target="_blank" rel="noopener noreferrer" class="event-ticket-btn-modern">
+            <span>GET TICKETS</span>
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M7 17L17 7M17 7H7M17 7V17"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
 
-    <h2 class="event-title" id="event1-title">HOUSE OF KHEPRI</h2>
-    <div class="event-container" aria-labelledby="event1-title">
-      <button class="nav-arrow nav-arrow-left" id="prevBtn" aria-label="Previous image">‹</button>
-      <img id="eventImage" src="Media/Events/HOK/kfemain.jpg" alt="Event">
-      <button class="nav-arrow nav-arrow-right" id="nextBtn" aria-label="Next image">›</button>
-    </div>
+    <!-- Past Events Gallery -->
+    <section class="past-events-section">
+      <div class="section-header">
+        <h2 class="section-title">PAST <span class="text-accent">EVENTS</span></h2>
+        <p class="section-subtitle">Relive the underground experiences</p>
+      </div>
+      
+      <div class="events-gallery">
+        <!-- House of Khepri Event -->
+        <div class="gallery-event-card">
+          <div class="gallery-event-header">
+            <h3 class="gallery-event-title">HOUSE OF KHEPRI</h3>
+            <p class="gallery-event-subtitle">Ancient Egyptian vibes meet modern underground</p>
+          </div>
+          <div class="gallery-slider">
+            <div class="slider-container" id="hokSlider">
+              <button class="slider-nav slider-nav-left" id="hokPrev" aria-label="Previous image">‹</button>
+              <img id="hokImage" src="Media/Events/HOK/kfemain.jpg" alt="House of Khepri Event">
+              <button class="slider-nav slider-nav-right" id="hokNext" aria-label="Next image">›</button>
+            </div>
+            <div class="slider-dots" id="hokDots"></div>
+          </div>
+        </div>
 
-    <div class="dots-container" id="dotsContainer"></div>
-
-    <!-- Static event: AFTERLIFE2 -->
-    <h2 class="event-title" id="event2-title">AFTERLIFE</h2>
-    <div class="event-container" aria-labelledby="event2-title">
-      <img src="Media/Events/AFTERLIFE2/AFTERLIFE2.png" alt="AFTERLIFE Event">
-    </div>
-  </div>
+        <!-- Afterlife Event -->
+        <div class="gallery-event-card">
+          <div class="gallery-event-header">
+            <h3 class="gallery-event-title">AFTERLIFE</h3>
+            <p class="gallery-event-subtitle">Journey beyond the veil of reality</p>
+          </div>
+          <div class="single-event-image">
+            <img src="Media/Events/AFTERLIFE2/AFTERLIFE2.png" alt="AFTERLIFE Event">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <script>
-    // HOK slider + swipe
-    const eventImage = document.getElementById('eventImage');
-    const prevBtn = document.getElementById('prevBtn');
-    const nextBtn = document.getElementById('nextBtn');
-    const dotsContainer = document.getElementById('dotsContainer');
-    const eventContainer = document.querySelector('#event1-title + .event-container');
+    // House of Khepri slider functionality
+    const hokImage = document.getElementById('hokImage');
+    const hokPrev = document.getElementById('hokPrev');
+    const hokNext = document.getElementById('hokNext');
+    const hokDots = document.getElementById('hokDots');
+    const hokSlider = document.getElementById('hokSlider');
 
-    const images = [
+    const hokImages = [
       'Media/Events/HOK/kfemain.jpg',
       'Media/Events/HOK/kfeoutsid.jpg',
       'Media/Events/HOK/kfemali.jpg',
@@ -222,42 +291,45 @@
     let touchStartX = 0;
     let touchEndX = 0;
 
-    images.forEach((_, index) => {
+    // Create dots for HOK slider
+    hokImages.forEach((_, index) => {
       const dot = document.createElement('span');
-      dot.className = 'dot';
+      dot.className = 'slider-dot';
       dot.addEventListener('click', () => {
         currentIndex = index;
-        updateImage();
+        updateHokImage();
       });
-      dotsContainer.appendChild(dot);
+      hokDots.appendChild(dot);
     });
 
-    function updateImage() {
-      eventImage.src = images[currentIndex];
-      const dots = document.querySelectorAll('.dot');
+    function updateHokImage() {
+      hokImage.src = hokImages[currentIndex];
+      const dots = document.querySelectorAll('.slider-dot');
       dots.forEach((dot, index) => {
         dot.classList.toggle('active', index === currentIndex);
       });
     }
 
     function goToPrevious() {
-      currentIndex = (currentIndex - 1 + images.length) % images.length;
-      updateImage();
+      currentIndex = (currentIndex - 1 + hokImages.length) % hokImages.length;
+      updateHokImage();
     }
 
     function goToNext() {
-      currentIndex = (currentIndex + 1) % images.length;
-      updateImage();
+      currentIndex = (currentIndex + 1) % hokImages.length;
+      updateHokImage();
     }
 
-    prevBtn.addEventListener('click', goToPrevious);
-    nextBtn.addEventListener('click', goToNext);
+    // Button event listeners
+    hokPrev.addEventListener('click', goToPrevious);
+    hokNext.addEventListener('click', goToNext);
 
-    eventContainer.addEventListener('touchstart', (e) => {
+    // Touch/swipe support
+    hokSlider.addEventListener('touchstart', (e) => {
       touchStartX = e.changedTouches[0].screenX;
     }, { passive: true });
 
-    eventContainer.addEventListener('touchend', (e) => {
+    hokSlider.addEventListener('touchend', (e) => {
       touchEndX = e.changedTouches[0].screenX;
       handleSwipe();
     }, { passive: true });
@@ -268,7 +340,8 @@
       if (touchEndX > touchStartX + swipeThreshold) goToPrevious();
     }
 
-    updateImage();
+    // Initialize
+    updateHokImage();
   </script>
 
   <footer class="footer">
