--- a/residents.html
+++ b/residents.html
@@ -359,9 +359,9 @@
           'His production style merges industrial textures with driving rhythms, creating tracks that resonate deeply with the techno community.'
         ],
         Kunja: [
-          'Kunja is a DJ and producer based in Mengeš, Slovenia. His sets fuse the raw drive of schranz with the intensity of hard techno, delivering high-energy performances that capture the relentless underground spirit of Anubis Underground.',
-          'Known for his technical precision and ability to read the crowd, Kunja creates unforgettable experiences on the dancefloor.',
-          'His dedication to the craft has made him a key figure in Slovenia\'s hard techno movement.'
+          'KUNJA is a young yet experienced artist who blends the driving rhythms of Hard Groove, Schranz, Hard Techno, and Industrial into an unforgettable musical journey. His sets are known for their energy, refined track selection, and deep connection with the crowd.',
+          'Playing on 3 to 4 channels, he creates layered and dynamic performances that keep the energy flowing. With his unique sonic signature, he has already performed across various clubs in Slovenia and the region, always ensuring a packed dance floor.',
+          'With a sharp sense for reading the vibe of the room, KUNJA is not just a performer but a true atmosphere creator – whether it’s an underground event or a major festival stage. His mission is clear: to turn every performance into an experience that lingers with the audience long after the last beat.'
         ],
         Bahun: [
           'Bahun is a DJ from Tržič, Slovenia, delivering fast and unforgiving schranz infused with a taste of every genre. His rare spark of vitality turns every set into a storm of rhythm and raw euphoria, where intensity meets groove and the crowd moves as one.',
