--- a/residents.html
+++ b/residents.html
@@ -205,9 +205,9 @@
         <p class="resident-name">Kosowsky</p>
         <div class="resident-image-slider">
           <div class="resident-images">
-            <img src="Media/Residents/kosowsky1.jpeg" alt="Kosowsky" class="active">
-            <img src="Media/Residents/kosowsky.JPG" alt="Kosowsky">
-            <img src="Media/Residents/kosowsky3.png" alt="Kosowsky">
+            <img src="Media/Residents/kosowsky1.webp" alt="Kosowsky" class="active">
+            <img src="Media/Residents/kosowsky.webp" alt="Kosowsky">
+            <img src="Media/Residents/kosowsky3.webp" alt="Kosowsky">
           </div>
           <div class="resident-image-dots">
             <button class="resident-image-dot active" data-slide="0" aria-label="Photo 1"></button>
@@ -220,9 +220,9 @@
         <p class="resident-name">Kunja</p>
         <div class="resident-image-slider">
           <div class="resident-images">
-            <img src="Media/Residents/kunja1.jpeg" alt="Kunja" class="active">
-            <img src="Media/Residents/kunja2.jpeg" alt="Kunja">
-            <img src="Media/Residents/kunja3.jpeg" alt="Kunja">
+            <img src="Media/Residents/kunja1.webp" alt="Kunja" class="active">
+            <img src="Media/Residents/kunja2.webp" alt="Kunja">
+            <img src="Media/Residents/kunja3.webp" alt="Kunja">
           </div>
           <div class="resident-image-dots">
             <button class="resident-image-dot active" data-slide="0" aria-label="Photo 1"></button>
@@ -235,9 +235,9 @@
         <p class="resident-name">Kayn</p>
         <div class="resident-image-slider">
           <div class="resident-images">
-            <img src="Media/Residents/kayn.jpg" alt="Kayn" class="active">
-            <img src="Media/Residents/kayn2.jpg" alt="Kayn">
-            <img src="Media/Residents/kayn3.jpg" alt="Kayn">
+            <img src="Media/Residents/kayn.webp" alt="Kayn" class="active">
+            <img src="Media/Residents/kayn2.webp" alt="Kayn">
+            <img src="Media/Residents/kayn3.webp" alt="Kayn">
           </div>
           <div class="resident-image-dots">
             <button class="resident-image-dot active" data-slide="0" aria-label="Photo 1"></button>
@@ -250,9 +250,9 @@
         <p class="resident-name">Nazh</p>
         <div class="resident-image-slider">
           <div class="resident-images">
-            <img src="Media/Residents/nazh2.png" alt="Nazh" class="active">
-            <img src="Media/Residents/nazh.png" alt="Nazh">
-            <img src="Media/Residents/nazh3.png" alt="Nazh">
+            <img src="Media/Residents/nazh2.webp" alt="Nazh" class="active">
+            <img src="Media/Residents/nazh.webp" alt="Nazh">
+            <img src="Media/Residents/nazh3.webp" alt="Nazh">
           </div>
           <div class="resident-image-dots">
             <button class="resident-image-dot active" data-slide="0" aria-label="Photo 1"></button>
@@ -265,9 +265,9 @@
         <p class="resident-name">Bahun</p>
         <div class="resident-image-slider">
           <div class="resident-images">
-            <img src="Media/Residents/bahun2.jpeg" alt="Bahun" class="active">
-            <img src="Media/Residents/bahun.png" alt="Bahun">
-            <img src="Media/Residents/bahun3.png" alt="Bahun">
+            <img src="Media/Residents/bahun2.webp" alt="Bahun" class="active">
+            <img src="Media/Residents/bahun.webp" alt="Bahun">
+            <img src="Media/Residents/bahun3.webp" alt="Bahun">
           </div>
           <div class="resident-image-dots">
             <button class="resident-image-dot active" data-slide="0" aria-label="Photo 1"></button>
@@ -280,9 +280,9 @@
         <p class="resident-name">Vanch</p>
         <div class="resident-image-slider">
           <div class="resident-images">
-            <img src="Media/Residents/vanch3.jpeg" alt="Vanch" class="active">
-            <img src="Media/Residents/vanch2.png" alt="Vanch">
-            <img src="Media/Residents/vanch.png" alt="Vanch">
+            <img src="Media/Residents/vanch3.webp" alt="Vanch" class="active">
+            <img src="Media/Residents/vanch2.webp" alt="Vanch">
+            <img src="Media/Residents/vanch.webp" alt="Vanch">
           </div>
           <div class="resident-image-dots">
             <button class="resident-image-dot active" data-slide="0" aria-label="Photo 1"></button>
