--- a/events.html
+++ b/events.html
@@ -198,7 +198,7 @@
       
       <div class="event-card-modern">
         <div class="event-image-container">
-          <img src="Media/Events/CLEOPATRAS/cleopatrascurse.jpg" alt="Cleopatra's Curse Event">
+          <img src="Media/Events/CLEOPATRAS/cleopatrascurse.webp" alt="Cleopatra's Curse Event">
           <div class="event-overlay">
             <div class="event-badge">NEXT EVENT</div>
           </div>
@@ -251,7 +251,7 @@
           <div class="gallery-slider">
             <div class="slider-container" id="hokSlider">
               <button class="slider-nav slider-nav-left" id="hokPrev" aria-label="Previous image">‹</button>
-              <img id="hokImage" src="Media/Events/HOK/kfemain.jpg" alt="House of Khepri Event">
+              <img id="hokImage" src="Media/Events/HOK/kfemain.webp" alt="House of Khepri Event">
               <button class="slider-nav slider-nav-right" id="hokNext" aria-label="Next image">›</button>
             </div>
             <div class="slider-dots" id="hokDots"></div>
@@ -265,7 +265,7 @@
             <p class="gallery-event-subtitle">Journey beyond the veil of reality</p>
           </div>
           <div class="single-event-image">
-            <img src="Media/Events/AFTERLIFE2/AFTERLIFE2.png" alt="AFTERLIFE Event">
+            <img src="Media/Events/AFTERLIFE2/AFTERLIFE2.webp" alt="AFTERLIFE Event">
           </div>
         </div>
       </div>
@@ -281,10 +281,10 @@
     const hokSlider = document.getElementById('hokSlider');
 
     const hokImages = [
-      'Media/Events/HOK/kfemain.jpg',
-      'Media/Events/HOK/kfeoutsid.jpg',
-      'Media/Events/HOK/kfemali.jpg',
-      'Media/Events/HOK/kfebihhole.jpg',
+      'Media/Events/HOK/kfemain.webp',
+      'Media/Events/HOK/kfeoutsid.webp',
+      'Media/Events/HOK/kfemali.webp',
+      'Media/Events/HOK/kfebihhole.webp',
     ];
 
     let currentIndex = 0;
