--- a/home.html
+++ b/home.html
@@ -221,7 +221,7 @@
       <div class="featured-event">
         <div class="event-card">
           <div class="event-image">
-            <img src="Media/Events/CLEOPATRAS/cleopatrascurse.jpg" alt="Cleopatra's Curse Event">
+            <img src="Media/Events/CLEOPATRAS/cleopatrascurse.webp" alt="Cleopatra's Curse Event">
             <div class="event-overlay">
               <div class="event-badge">NEXT EVENT</div>
             </div>
