--- a/submission.html
+++ b/submission.html
@@ -285,7 +285,7 @@
       const submitBtn = form.querySelector('button[type="submit"]');
       const originalBtnText = submitBtn ? submitBtn.textContent : '';
 
-      const DISCORD_WEBHOOK = 'https://discordapp.com/api/webhooks/1435427580227485818/zZt1GhLFfEhgz5kCSPm330XnfoS6e8f5-muqWUPa1-QzXZkfDVfhUv55xh_b2jRrF3NX';
+      const DISCORD_WEBHOOK = 'https://discord.com/api/webhooks/1442644304945217656/sYHL5pOc1GRyeB_PTqTDDnp-CDasmnHkosWTBeYg9ZK-IoYvrtaZK0_tvqASIqe34j8u';
 
       async function sendDiscordNotification(formData) {
         try {
