--- a/residents.html
+++ b/residents.html
@@ -818,7 +818,7 @@
             setButtonState('Booking submitted', '#28a745', '#fff');
             // send Discord webhook with booking details (do this after email was accepted by Formspree)
             try {
-              const webhookUrl = 'https://discordapp.com/api/webhooks/1435427570752557269/J1VaZBnjNdLZka0toQvnnpwsC9TAe2dpM2pNoeiHp0zNqu-U1tho1i4yrAf7IP4EHa6z';
+              const webhookUrl = 'https://discord.com/api/webhooks/1442644367612317731/m1hGi6cBBV6u82dQTP7N6UzFiXq03sOZOdc9TKXOjRQAsj6Au9N69U_LrOMHHYFDDySn';
               const bookingData = {
                 name: fd.get('name') || '',
                 email: fd.get('email') || '',
