--- a/events.html
+++ b/events.html
@@ -198,18 +198,18 @@
       
       <div class="event-card-modern">
         <div class="event-image-container">
-          <img src="Media/Events/CLEOPATRAS/cleopatrascurse.webp" alt="Cleopatra's Curse Event">
+          <img src="Media/Events/BOCKA/vanchb2bkosi.webp" alt="Anubis Represents: Kosowsky b2b Vanch All Night Long">
           <div class="event-overlay">
             <div class="event-badge">NEXT EVENT</div>
           </div>
         </div>
         <div class="event-details-modern">
-          <h3 class="event-name-modern">CLEOPATRA'S CURSE</h3>
-          <p class="event-description-modern">An underground journey through ancient mystique and modern beats. Experience the curse that binds rhythm to soul in the depths of Ljubljana's underground scene.</p>
+          <h3 class="event-name-modern">ANUBIS REPRESENTS: KOSOWSKY B2B VANCH</h3>
+          <p class="event-description-modern">All Night Long underground experience with Kosowsky b2b Vanch. An immersive journey through the depths of electronic music in Ljubljana's underground scene.</p>
           <div class="event-meta-grid">
             <div class="meta-item">
               <span class="meta-label">DATE</span>
-              <span class="meta-value">22.11.2025</span>
+              <span class="meta-value">10.01.2026</span>
             </div>
             <div class="meta-item">
               <span class="meta-label">LOCATION</span>
@@ -217,14 +217,14 @@
             </div>
             <div class="meta-item">
               <span class="meta-label">GENRE</span>
-              <span class="meta-value">Underground Techno</span>
+              <span class="meta-value">BOCHKA</span>
             </div>
             <div class="meta-item">
               <span class="meta-label">STATUS</span>
               <span class="meta-value">Tickets Available</span>
             </div>
           </div>
-          <a href="https://www.entrio.si/event/anubis-cleopatras-curse-27981" target="_blank" rel="noopener noreferrer" class="event-ticket-btn-modern">
+          <a href="https://www.entrio.si/en/event/anubis-represents-kosowsky-b2b-vanch-all-night-long-28685" target="_blank" rel="noopener noreferrer" class="event-ticket-btn-modern">
             <span>GET TICKETS</span>
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M7 17L17 7M17 7H7M17 7V17"/>
@@ -242,6 +242,17 @@
       </div>
       
       <div class="events-gallery">
+        <!-- Cleopatra's Curse Event -->
+        <div class="gallery-event-card">
+          <div class="gallery-event-header">
+            <h3 class="gallery-event-title">CLEOPATRA'S CURSE</h3>
+            <p class="gallery-event-subtitle">Ancient mystique meets modern underground beats</p>
+          </div>
+          <div class="single-event-image">
+            <img src="Media/Events/CLEOPATRAS/cleopatrascurse.webp" alt="Cleopatra's Curse Event" style="object-position: center top;">
+          </div>
+        </div>
+
         <!-- House of Khepri Event -->
         <div class="gallery-event-card">
           <div class="gallery-event-header">
