--- a/home.html
+++ b/home.html
@@ -221,25 +221,25 @@
       <div class="featured-event">
         <div class="event-card">
           <div class="event-image">
-            <img src="Media/Events/CLEOPATRAS/cleopatrascurse.webp" alt="Cleopatra's Curse Event">
+            <img src="Media/Events/BOCKA/vanchb2bkosi.webp" alt="Anubis Represents: Kosowsky b2b Vanch All Night Long">
             <div class="event-overlay">
               <div class="event-badge">NEXT EVENT</div>
             </div>
           </div>
           <div class="event-details">
-            <h3 class="event-name">CLEOPATRA'S CURSE</h3>
-            <p class="event-description">An underground journey through ancient mystique and modern beats. Experience the curse that binds rhythm to soul.</p>
+            <h3 class="event-name">ANUBIS REPRESENTS: KOSOWSKY B2B VANCH</h3>
+            <p class="event-description">All Night Long underground experience with Kosowsky b2b Vanch. An immersive journey through the depths of electronic music in Ljubljana's underground scene.</p>
             <div class="event-meta">
               <div class="event-date">
                 <span class="meta-label">DATE</span>
-                <span class="meta-value">22.11.2025</span>
+                <span class="meta-value">10.01.2026</span>
               </div>
               <div class="event-location">
                 <span class="meta-label">LOCATION</span>
                 <span class="meta-value">Ljubljana, Slovenia</span>
               </div>
             </div>
-            <a href="https://www.entrio.si/event/anubis-cleopatras-curse-27981" target="_blank" rel="noopener noreferrer" class="event-ticket-btn">
+            <a href="https://www.entrio.si/en/event/anubis-represents-kosowsky-b2b-vanch-all-night-long-28685" target="_blank" rel="noopener noreferrer" class="event-ticket-btn">
               <span>GET TICKETS</span>
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M7 17L17 7M17 7H7M17 7V17"/>
@@ -264,16 +264,16 @@
           <div class="card-header">
             <div class="card-icon">🎧</div>
             <div class="card-info">
-              <h3 class="card-title">ANUBIS PODCAST #017</h3>
-              <p class="card-subtitle">Mixed by ZNITE</p>
+              <h3 class="card-title">ANUBIS PODCAST #019</h3>
+              <p class="card-subtitle">Mixed by GSMN</p>
             </div>
           </div>
           <div class="card-content">
             <div class="audio-player">
-              <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/anubis_records/anubis-podcast-17-znite&color=%23ff2a2a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true&buying=false&liking=false&download=false&sharing=false&show_playcount=false"></iframe>
+              <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/anubis_records/anubis-podcast-019-gsmn&color=%23ff2a2a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true&buying=false&liking=false&download=false&sharing=false&show_playcount=false"></iframe>
             </div>
             <div class="card-actions">
-              <a href="https://soundcloud.com/anubis_records" target="_blank" class="card-link">
+              <a href="https://soundcloud.com/anubis_records/anubis-podcast-019-gsmn" target="_blank" class="card-link">
                 View on SoundCloud →
               </a>
             </div>
